<resources>
    <string name="app_name">perfectWater</string>

    <!-- Strings related to login -->
    <string name="prompt_zip">Zip code</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_page_register_button">Register</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This username and password combination is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
tr    </string>

    <!-- Strings on home screen -->
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="home_screen_logout_button">Log Out</string>
    <string name="title_activity_registration">Registration</string>
    <string name="home_screen_edit_profile_button">Edit Profile</string>>

    <!-- Strings on edit profile screen -->
    <string name="edit_screen_user_profile">User Profile</string>>
    <string name="edit_screen_first_name">First Name</string>>
    <string name="edit_screen_last_name">Last Name</string>>
    <string name="edit_screen_email">Email</string>>
    <string name="edit_screen_address">Residential Address</string>


    <!-- Strings on registration screen -->
    <string name="registration_button">Register!</string>
    <string name="prompt_name">Your Name</string>
    <string name="action_name_short">Name</string>
    <string name="select_user_type">Select User Type</string>
    <string name="cancel_registration">Cancel</string>
    <string name="title_activity_water_source_report">water source</string>
    <string name="title_activity_reports">ReportsActivity</string>
    <string name="title_activity_reports_list">ReportsList</string>
    <string name="title_activity_water_purity_report">WaterPurityReportActivity</string>
    <string name="title_activity_purity_list">PurityListActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_historical_graph">HistoricalGraphActivity</string>

    <string name="facebook_application_id" translatable="false">708504369319588</string>
    <string name="title_activity_firebase_login">FirebaseLoginActivity</string>

    <!-- Strings on report screen -->
    <string name="add_water_source_report">Add_Water Source Report</string>
    <string name="add_water_purity_report">Add Water Purity Report</string>
    <string name="view_water_source_report">View Water Source Report</string>
    <string name="view_water_purity_report">View Water Purity Report</string>
    <string name="view_historical_report">View Historical Report</string>
    <string name="home_button">Home</string>
</resources>

