<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.thushara.perfectwater.Controller.EditProfile"
    tools:showIn="@layout/activity_edit_profile">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textSize ="16dp"
        android:id="@+id/editFirstName"
        android:layout_below="@+id/editFirstNameTitle"
        android:layout_alignLeft="@+id/editFirstNameTitle"
        android:layout_alignStart="@+id/editFirstNameTitle" />

    <TextView
        android:text="@string/edit_screen_user_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editScreenUserProfile"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editFirstNameTitle"
        android:layout_alignStart="@+id/editFirstNameTitle" />

    <TextView
        android:text="@string/edit_screen_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editLastnameTitle"
        android:textSize="20dp"
        android:layout_below="@+id/editFirstName"
        android:layout_alignLeft="@+id/editFirstName"
        android:layout_alignStart="@+id/editFirstName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textSize="16dp"
        android:layout_below="@+id/editLastnameTitle"
        android:layout_alignLeft="@+id/editLastnameTitle"
        android:layout_alignStart="@+id/editLastnameTitle"
        android:id="@+id/editlastName" />

    <TextView
        android:text="@string/edit_screen_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editFirstNameTitle"
        android:textSize="20dp"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_below="@+id/editScreenUserProfile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" />

    <TextView
        android:text="@string/edit_screen_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_below="@+id/editlastName"
        android:layout_alignLeft="@+id/editlastName"
        android:layout_alignStart="@+id/editlastName"
        android:id="@+id/editEmailTitle" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textSize="16dp"
        android:id="@+id/editEmail"
        android:layout_below="@+id/editEmailTitle"
        android:layout_alignLeft="@+id/editEmailTitle"
        android:layout_alignStart="@+id/editEmailTitle" />

    <TextView
        android:text="@string/edit_screen_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_below="@+id/editEmail"
        android:layout_alignLeft="@+id/editEmail"
        android:layout_alignStart="@+id/editEmail"
        android:id="@+id/editAddress" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textSize="16dp"
        android:id="@+id/editAddressTitle"
        android:layout_below="@+id/editAddress"
        android:layout_alignLeft="@+id/editAddress"
        android:layout_alignStart="@+id/editAddress" />

    <Button
        android:text="save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="58dp"
        android:id="@+id/save" />


</RelativeLayout>
